# ngspice_cosim_inv

./: .gitattributes  .gitignore  .gitmodules  404.html  Makefile  ethz.env  index.html  inv.sv  inv.sym  inv_tb.sch  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
cosimulation/: yosys_online.html
cosimulation/bridges/: index.html
cosimulation/design/: index.html
cosimulation/intro/: index.html
designs/basic/: adc.sch  adc.sv  adc.sym  adc_tb.sch  adc_vlog.sym  vaporview.json
designs/basic1/: Makefile  adc.sch  adc.sv  adc.sym  adc_tb.sch  adc_vlog.sym  vaporview.json
designs/cdac/: cdac.sch  cdac.sym  cdac_tb.sch
designs/cdac_diff/: Makefile  cdac.sch  cdac.sym  cdac_tb.sch
designs/comparator/: Makefile  comparator.sch  comparator_old.sch  comparator_tb.sch  main.ipynb
designs/comparator_debug/: comparator.sch  comparator.tar  comparator_tb.sch
designs/comparator_dt/: comparator.sch  comparator.sym  comparator_tb.sch
designs/comparator_harald/: comparator.sch  comparator_tb.sch
designs/comparator_harald_test/: comparator.sch  comparator_tb.sch
designs/comparator_noise/: comparator_tb.sch
designs/comparator_sweep/: comparator_tb.sch
designs/diff/: .gitignore  (+2 more)
instructions/: creating_design_xschem.md  getting_started_xschem.md  mkdocs.yml
ngspice_cosim_tgate/: tgate.sch  tgate.sym  tgate_tb.sch
project/: Makefile
search/: search_index.json
visualization/: capacitor_parameters.ipynb  cdac.ipynb  common.py  comparator.ipynb  nmos_characteristics.ipynb  pmos_characteristics.ipynb  tgate.ipynb  visualization.ipynb
(+107 files in other folders)
